# ThisThing

./: .gitignore  CMakeLists.txt
KeithThing/: CMakeLists.txt  Consonant.cpp  Consonant.h  Phone.cpp  Phone.h  main.cpp  main.h
KeithThing/data/: manners.articulation  places.articulation
KeithThing/headers/: Consonant.h
KeithThing/src/: Consonant.cpp
